# id-card-yemen

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  check_images.py  debug_db_content.py  docker-compose.yml  extract_pdf_images.py  main.py  pyproject.toml  run_dev.bat  setup.py  test.py  test_api.py  test_verify_enhanced.py  test_yolo_debug.py
alembic/: env.py
api/: routes.py  test_routes.py
data/: yemen_locations.py
docs/: API_ENDPOINTS_FOR_SDK_DEV.md  DATABASE_SCHEMA.md  DEPLOYMENT_GUIDE_LINUX.md  DOCUMENT_VALIDATION_LOGIC.md  DOCUMENT_VALIDATION_PLAN.md  DOCUMENT_VALIDATION_REFERENCE.md  IMAGE_QUALITY_SERVICE.md  LIVENESS_DETECTION.md  NER_SETUP.md  PUBLIC_ACCESS_GUIDE.md  QUICK_START_FOR_SDK_TESTING.md  SDK_README.md  TESTING_GUIDE.md
middleware/: __init__.py  api_key.py  request_id.py
models/: form_validators.py  schemas.py  sql_models.py  v1_schemas.py
scripts/: autocrop_id_cards.py  download_models.py
services/: antispoof_model.py  config_service.py  data_service.py  database.py  db.py  document_validation_helpers.py  expiry_date_service.py  face_extractor.py  face_recognition.py  field_comparison_service.py  id_card_parser.py  id_database.py  image_quality_service.py  layout_service.py  liveness_service.py  name_matching_service.py  ner_extractor.py  ocr_service.py  passport_mrz_parser.py  passport_ocr_service.py  passport_validation_service.py  place_of_birth_service.py  scoring_service.py  translation_service.py  transliteration_core.py  verification_policy.py  yemen_id_validation_service.py
static/: index.html  script.js  (+1 more)
(+62 files in other folders)
