[project]
name = "id-card-yemen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-vision>=3.11.0",
    "numpy>=1.26.4,<2.0.0",
    "opencv-python>=4.8.0,<4.10.0",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "pillow>=12.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.20.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.10.0",
    "deep-translator>=1.11.4",
    "httpx>=0.27.0",
    "spacy>=3.7.0",
    "ultralytics>=8.0.0",
    "pytesseract>=0.3.10",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
